fix footer responsiveness on mobile

--- a/styles.css
+++ b/styles.css
@@ -340,13 +340,21 @@ h1.contact__title {
         width: 300px;
     }
 
-    .main__footer li{
-        font-size: 12px;
+    .main__footer li {
+        font-size: 10px;
+    }
+
+    .main__footer li a{
+        font-size: 10px;
     }
 
     .main__footer ul{
+        text-align: center;
+        display: flex;
+        flex-direction: row;
         justify-content: center;
         width: 80%;
+        gap: 15px
     }
 }
 
